--- a/index.html
+++ b/index.html
@@ -50,31 +50,31 @@
         </div>
 
         <div class="nested2 flex">
-            <div class="article1">
+            <div class="article1 articles">
                 <div class="photoIc photoIc1"><img
                         src="https://s3-alpha-sig.figma.com/img/e653/c30f/3ace28787241278b1d4648d36a246765?Expires=1729468800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Il1MP8Jxm6dGP5psSvQA1O0x6zxeh2n-hi2eEeeTDKu2sNYZWhadHd8NJqghCA-x5jj66Ohqyulk8v8p2ow3ztdgydYFdARpLwwLRLDCBukaUMJSd1amn-xJ3HQbmkF6ECW1Xa4UFaXI3tR5WnhF3ct-Fzwh9lvS9hr3j43tB1VT-nNyVDQaKuYxuPRARxYlslihH65lPcbpOVIosF4uA98ydk0MvS~kunvNhiWY9XfRpjXzDwntAm6KDWDD2mEiWNkzYLfBTuEM5iyWtAhs3Z6gVG4fnxcZY~8SYNfrP5TSB6CFWb47MEQOwTUyp~SeJKmQfK5gbEst~jKIDz6dcQ__"
                         alt=""></div>
             </div>
-            <div class="article2">
+            <div class="article2 articles">
                 <div class="textA1 textA ">
                     <div class="num">01</div>
                     <div class="title">What happens when ol</div>
                     <div class="contenu">Reviving Retro PCs</div>
                 </div>
             </div>
-            <div class="article3">
+            <div class="article3 articles">
                 <div class=" photoIc photoIc2"><img
                         src="https://s3-alpha-sig.figma.com/img/49fd/5a42/41e34951a8be6f0e95b3b007d25df74c?Expires=1729468800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=LXNEkvQnBCZPmkWTKj~ERICCf7ArZeBiI-8wG9YqJX-IpUvdu3GhOBX8oE9iPFQsly95zDWje4O546iAEpI5F3w0XptfUZND9SicLafh~JO4sKwG3YWJlNTtQfPbj9jCasgeyT1JthcJd0hCBkapSJDDTbNbB62SeBFWs8XQpXrPzFbVGSyQufbk2zKCq6Yvv63B0erHAOmocTeiQmlVzudg5Setyo6yxHZK9AqYICBwj-YMcM1Lgio4SlNNXp~Abvaj02l32PYXas5BJh8xOWehv6EqczBa-5nkAOAVVqfsvMxfWN5uPjLKXk3j6FhgaiG7Ot9eEgo7IR94SBzxGQ__"
                         alt=""></div>
             </div>
-            <div class="article4">
+            <div class="article4 articles">
                 <div class="textB textA">
                     <div class="num">02</div>
                     <div class="title">Top 10 Laptops of 20</div>
                     <div class="contenu">Our best picks for various needs and budgets.</div>
                 </div>
             </div>
-            <div class="article5">
+            <div class="article5 articles">
                 <div class="photoIc photoIc3"><img
                         src="https://s3-alpha-sig.figma.com/img/101f/7014/80e0e994875a69e32c1d78a42eb71fb1?Expires=1729468800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=SFt~D2iTmBG8JhVKTHRbooWIlQbDNFNinL4Nn40XTJJINy7Vdpg0FXU-9SxkBjDgYiSim53wwVt~2coGWGUTeYge0snzdLmvHvEzDljWq2F-AFZv5xEsdXTIuOirFSR30FsQIMgsY4rVgTXJ2w6T~eJigfDieDJfJJBfO5vvWg-aGzluqYZ9AS-UUb4QKXlfMz50QBNchlEr6hku9AdT8bxcg8RXgELrenZAyAN0c6j5r6VwUXICC4UEJeRnY6FqrvEtVMwESZMkcNn-H3vWVsmTQm6N2XrIp33CH-flXf4vBL-KYfAaxyUUPZrc9e67Ye1McFQpRAlvadoEKA6ZsA__"
                         alt=""></div></div>
